--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -6,6 +6,9 @@ jobs:
     first_job:
         runs-on: ubuntu-latest
         steps:
+        - name: Checkout Repo
+          uses: actions/Checkout@v4
+
         - name: Welcome message
           run: echo "Welcome to GitHub actions!"
 
