--- a/.github/workflows/test1.yml
+++ b/.github/workflows/test1.yml
@@ -9,11 +9,17 @@ jobs:
         - name: Checkout Repo
           uses: actions/Checkout@v4
 
-        - name: Welcome message
-          run: echo "Welcome to GitHub actions!"
+        - name: List and Read file
+          run: 
+              echo "Welcome to GitHub actions!"
+              ls -ltra
+              cat README.md
 
-        - name: List files
-          run: ls
+        - name: Generate ASCII Artwork
+          run: cowsay -f dragon @Run for cover. I am a DRAGON...RAWR" >> dragon.txt
 
-        - name: Read file
-          run: cat README.md
+      #  - name: List files
+       #   run: ls
+
+       # - name: Read file
+       #   run: cat README.md
