--- a/.github/workflows/multiple-jobs.yml
+++ b/.github/workflows/multiple-jobs.yml
@@ -13,6 +13,7 @@ jobs:
             - name: Sleep for 30 seconds
               run: sleep 30
     test_job_2:
+        needs: build_job_1
         runs-on: ubuntu-latest
         steps:
           - name: Sleep for 10 Seconds
@@ -20,6 +21,7 @@ jobs:
           - name: Test File exists
             run: grep -i "dargon" dragon.txt
     deploy_job_3:
+        needs: [build_job_1, test_job_2]
         runs-on: ubuntu-latest
         steps:
             - name: Read File
