--- a/.github/workflows/multiple-jobs.yml
+++ b/.github/workflows/multiple-jobs.yml
@@ -10,20 +10,29 @@ jobs:
               run: sudo apt-get install cowsay -y
             - name: Execute Cowsay CDM
               run: cowsay -f dragon "Run for cover, I am a DRAGON...RAWR" >> dragon.txt
-            - name: Sleep for 30 seconds
-              run: sleep 30
+            - name: Upload Dragon text file
+              uses: actions/upload-artifact@v4
+              with:
+                name: dragon-test-file
+                path: dragon.txt
     test_job_2:
         needs: build_job_1
         runs-on: ubuntu-latest
         steps:
-          - name: Sleep for 10 Seconds
-            run: slepp 10
+          - name: Download Drafon text file
+            uses: actions/download-artifact@v4
+            with:
+                name: dargon-text-file
           - name: Test File exists
             run: grep -i "dargon" dragon.txt
     deploy_job_3:
         needs: [build_job_1, test_job_2]
         runs-on: ubuntu-latest
         steps:
+            - name: Download Drafon text file
+              uses: actions/download-artifact@v4
+              with:
+                name: dargon-text-file
             - name: Read File
               run: cat dragon.txt
             - name: Deploy
