--- a/.github/workflows/multiple-jobs.yml
+++ b/.github/workflows/multiple-jobs.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           name: dragon-text-file
       - name: Test File exists
-        run: grep -i "dargon" dragon.txt
+        run: grep -i "dragon" dragon.txt
   deploy_job_3:
     needs: [build_job_1, test_job_2]
     runs-on: ubuntu-latest
