--- a/.github/workflows/variable-secrets.yml
+++ b/.github/workflows/variable-secrets.yml
@@ -1,19 +1,15 @@
 name: Exploring Variables and Secrets
 on: push
-env:
-      CONTAINER_REGISTRY: docker.io
-      DOCKER_USERNAME: username
-      IMAGE_NAME: github-actions-nginx
+
 jobs:
   docker:
     runs-on: ubuntu-latest
     steps:
     - name: Docker Build
-      run: echo docker build -t ${{ env.CONTAINER_REGISTRY }}/$DOCKER_USERNAME/$IMAGE_NAME:latest
+      run: echo docker build -t $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
+
     - name: Docker Login
-      env:
-        DOCKER_PASSWORD: password
-      run: echo docker login --username=$DOCKER_USERNAME --password=$DOCKER_PASSWORD
+      run: echo docker login --username=$DOCKER_USERNAME --password=${{ secrets.DOCKER_PASSWORD }}
       
     - name: Docker Publish
       run: echo docker push $CONTAINER_REGISTRY/$DOCKER_USERNAME/$IMAGE_NAME:latest
